--- a/projects.html
+++ b/projects.html
@@ -150,10 +150,10 @@
                 <div class="project-item">
                     <img src="images/first_game.jpg" alt="Project 2" />
                     <div class="project-card">
-                        <h3>Second Project</h3>
-                        <p>My first game made using python.</p>
+                        <h3>My First Game</h3>
+                        <p>My first game made using Python.</p>
                         <div class="more-info">
-                            <p>This project of mine was made using python. I watched some simple videos on how to add AI bots to your project. I, then ussed the library "turtle", and made a racing game. I also added obstacles, and used the simple AI logic to the computer, so the computer turtles can also race while avoiding obstacles. For me, for my first game in python, this was a good project, even if this was not done by me alone.</p>
+                            <p>This project of mine was made using Python. I watched some simple videos on how to add AI bots to your project. I, then ussed the library "turtle", and made a racing game. I also added obstacles, and used the simple AI logic to the computer, so the computer turtles can also race while avoiding obstacles. For me, for my first game in python, this was a good project, even if this was not done by me alone.</p>
                         </div>
                         <button class="show-more-btn" onclick="toggleDetails(this)">Show More</button>
                     </div>
